fix(ui): shifted the contents for card ctn and darkened create button
- no need to create database in backend run time

--- a/client/src/components/CreateTimesheetBtn/CreateTimesheetBtn.module.css
+++ b/client/src/components/CreateTimesheetBtn/CreateTimesheetBtn.module.css
@@ -9,7 +9,7 @@
     width: 250px; 
     height: 300px; 
     background-color: #f0f0f0; 
-    opacity: 0.5;
+    opacity: 0.85;
     display: flex;
     flex-direction: column;
     justify-content: center;
