--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,5 @@
 .contentCtn  {
-    margin-left: 60px;
+    margin-left: 200px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
